# lsty

./: .gitignore  Cargo.toml  Dockerfile  README.md  data copy.json  lusty.md
.github/workflows/: release.yml
src/: main.rs
src/cli/: cli_format.rs  menu.rs  message_printer.rs  messages.rs  mod.rs  status_symbols.rs
src/cli/command/: command_manager.rs  commands.rs  mod.rs
src/cli/commands/: command_actions.rs  mod.rs
src/commands/: arguments.rs  command_manager.rs  mod.rs
src/commands/actions/: add.rs  alias.rs  edit.rs  import.rs  remove.rs  rename.rs
src/data/: check_input.rs  data_actions.rs  data_manager.rs  json_manager.rs  mod.rs  model.rs
src/data/data_actions/: add.rs  alias.rs  edit.rs  import.rs  remove.rs
src/data/methods/: add.rs  alias.rs  copy.rs  edit.rs  import.rs  mod.rs  moving.rs  remove.rs  rename.rs  scan.rs
src/interfaces/: menu.rs
테스트4/: .DS_STORE.DS_Store"
