[package]
name = "lsty"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
camino = "1.1.6"
clap = { version = "4.5.1", features = ["derive"] }
colored = "2.1.0"
crossterm = "0.20.0"
regex = "1.10.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strum = "0.26.2"
strum_macros = "0.26.2"
unicode-normalization = "0.1.23"

[target.x86_64-unknown-linux-gnu]
openssl = { version = "0.9.88", features = ["vendored"] }
